--- a/dcgan-mnist-generator/requirements.txt
+++ b/dcgan-mnist-generator/requirements.txt
@@ -1,7 +1,6 @@
-torch
-os
-gdown
-torchvision
-matplotlib
-numpy
-streamlit
+streamlit==1.35.0
+torch==2.2.2
+torchvision==0.17.2
+matplotlib==3.8.4
+numpy==1.26.4
+gdown==5.1.0
