--- a/dcgan-mnist-generator/requirements.txt
+++ b/dcgan-mnist-generator/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.35.0
 gdown==5.1.0
-numpy==1.26.4
-matplotlib==3.8.4
-torch==2.2.2+cpu
-torchvision==0.17.2+cpu
+numpy
+matplotlib
+torch==2.7.1+cpu
+torchvision==0.18.1+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
+
